--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -90,7 +90,7 @@ jobs:
 
     runs-on: ${{matrix.os}}
     env:
-      DIST_DIR: smartdns-${{ matrix.target }}
+      DIST_DIR: pkomga-${{ matrix.target }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -108,20 +108,15 @@ jobs:
       - name: Prepare package
         run: |
           mkdir $DIST_DIR
-          cp LICENSE $DIST_DIR
-          cp README*.md $DIST_DIR
-          cp etc/smartdns/smartdns.conf $DIST_DIR
-          echo "Version: ${{ inputs.version }}" > $DIST_DIR/version
-          echo "Build date: $(date)" >> $DIST_DIR/version
-          echo "Commit: $(git rev-parse HEAD)" >> $DIST_DIR/version
+          cp config.json $DIST_DIR
         shell: bash
           
       - name: Publish archive
         if: ${{ !contains(matrix.target, 'windows') && !contains(matrix.target, 'darwin') }}
         env:
-          ARCHIVE_FILE: smartdns-${{ matrix.target }}-${{inputs.version}}.tar.gz
+          ARCHIVE_FILE: pkomga-${{ matrix.target }}-${{inputs.version}}.tar.gz
         run: |
-          cp target/${{ matrix.target }}/release/smartdns $DIST_DIR
+          cp target/${{ matrix.target }}/release/pkomga $DIST_DIR
           tar -zcvf $ARCHIVE_FILE $DIST_DIR
           shasum -a256 $ARCHIVE_FILE > $ARCHIVE_FILE-sha256sum.txt
           echo "archive_file=$ARCHIVE_FILE" >> $GITHUB_ENV
@@ -129,9 +124,9 @@ jobs:
       - name: Publish zip archive macos
         if: ${{ contains(matrix.target, 'darwin') }}
         env:
-          ARCHIVE_FILE: smartdns-${{ matrix.target }}-${{inputs.version}}.zip
+          ARCHIVE_FILE: pkomga-${{ matrix.target }}-${{inputs.version}}.zip
         run: |
-          cp target/${{ matrix.target }}/release/smartdns $DIST_DIR
+          cp target/${{ matrix.target }}/release/pkomga $DIST_DIR
           zip -9r $ARCHIVE_FILE $DIST_DIR
           shasum -a256 $ARCHIVE_FILE > $ARCHIVE_FILE-sha256sum.txt
           echo "archive_file=$ARCHIVE_FILE" >> $GITHUB_ENV
@@ -139,9 +134,9 @@ jobs:
       - name: Publish zip archive windows
         if: ${{ contains(matrix.target, 'windows') }}
         env:
-          ARCHIVE_FILE: smartdns-${{ matrix.target }}-${{inputs.version}}.zip
+          ARCHIVE_FILE: pkomga-${{ matrix.target }}-${{inputs.version}}.zip
         run: |
-          cp target/${{ matrix.target }}/release/smartdns.exe $DIST_DIR
+          cp target/${{ matrix.target }}/release/pkomga.exe $DIST_DIR
           7z a -tzip $ARCHIVE_FILE $DIST_DIR
           echo ${{ hashFiles(env.ARCHIVE_FILE) }} > $ARCHIVE_FILE-sha256sum.txt
           echo "archive_file=$ARCHIVE_FILE" >> $GITHUB_ENV
@@ -150,7 +145,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: smartdns-${{ matrix.target }}-${{ inputs.version }}
+          name: pkomga-${{ matrix.target }}-${{ inputs.version }}
           retention-days: 30
           path: ${{ env.archive_file }}  
       
