--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -83,29 +83,10 @@ jobs:
         with:
           ref: ${{ inputs.version }}
 
-      - name: Install Rust Toolchain Components
-        uses: dtolnay/rust-toolchain@stable
+      - name: Setup
+        uses: ./.github/actions/setup
         with:
-            toolchain: stable
-            target: ${{ matrix.target }}
-
-      - name: Install just
-        uses: extractions/setup-just@v2
-
-      - name: Install cross
-        uses: taiki-e/install-action@v2
-        with:
-            tool: cross
-
-      - name: Install cargo-edit
-        uses: baptiste0928/cargo-install@v3
-        with:
-            crate: cargo-edit
-
-      - name: Install patch-crate
-        uses: baptiste0928/cargo-install@v3
-        with:
-            crate: patch-crate
+          target: ${{ matrix.target }}
 
       - name: Build
         run: just build --release --no-default-features --target=${{ matrix.target }}
