--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ serde = { version = "1.0.209", features = ["derive"] }
 serde_json = { version = "1.0.127" }
 indicatif = { version = "0.17.8" }
 lazy_static = { version = "1.5.0" }
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
