--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -44,12 +44,12 @@ jobs:
           #   archive: tar.gz tar.xz tar.zst
           # - target: arch64-unknown-linux-musl
           #   archive: tar.gz tar.xz tar.zst
-          # - target: x86_64-unknown-linux-musl
-          #   os: ubuntu-latest
-          #   archive: tar.gz tar.xz tar.zst
-          - target: x86_64-unknown-linux-gnu
+          - target: x86_64-unknown-linux-musl
             os: ubuntu-latest
             archive: tar.gz tar.xz tar.zst
+          # - target: x86_64-unknown-linux-gnu
+          #   os: ubuntu-latest
+          #   archive: tar.gz tar.xz tar.zst
           # - target: arm-unknown-linux-musleabi
           #   os: ubuntu-latest
           #   archive: tar.gz tar.xz tar.zst
@@ -89,7 +89,7 @@ jobs:
           target: ${{ matrix.target }}
 
       - name: Build
-        run: cargo b --release --target=${{ matrix.target }}
+        run: cross b --release --target=${{ matrix.target }}
         env:
           USE_CROSS: ${{ matrix.os == 'ubuntu-latest' }}
 
